# portfolio

./: .gitignore  Dockerfile  README.md  app.py  data.sqlite  fly.toml  forms.py  models.py  pyproject.toml
blogs/: file_upload.py  forms.py  views.py
home/: views.py
migrations/versions/: 511292ff6b7d_initial_commit.py  c3e8d517223f_update.py
portfolio/: __init__.py  data.sqlite
portfolio/templates/: base.html  blog_post.html  blogs.html  create_blog.html  index.html  login.html  projects.html  register.html  testnav.html
portfolio/templates/error_pages/: 403.html
projects/: views.py
templates/: base.html  blogs.html  create_blog.html  index.html
users/: forms.py  views.py
